@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+    - Use v3-like repo/bugtracker metadata. And use Authority too.
+
 0.18 2010-05-26 12:38:13
 
     - Use RT, not Github as the bugtracker by default
